# docgenny

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docgenny/: __init__.py  __main__.py  cli.py  generator.py
